--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "7.2.0",
     "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/router": "7.2.0",
+    "@ngrx/store": "^7.4.0",
     "@types/jquery": "^3.3.28",
     "@types/jqueryui": "^1.12.6",
     "bootstrap": "^4.0.0",
