--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "7.2.0",
     "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/router": "7.2.0",
+    "@ngrx/effects": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@types/jquery": "^3.3.28",
     "@types/jqueryui": "^1.12.6",
@@ -34,9 +35,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "7.2.0",
+    "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "7.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
